Remove need for manually fetching Locode. Made faster.
